<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!--Recognition Mushroom-->
    <string name="textRecognitionTitle">RECONOCIENDO SETA</string>
    <string name="app_name">Fellowship Fungi</string>
    <string name="textStopRecognition">Anular Reconocimiento</string>
    <string name="textRecognitionStepCount">0 Pasos</string>
    <string name="textBackRecognition">Paso atras</string>
    <!--Dialog-->
    <string name="YES">SI</string>
    <string name="CANCELAR">CANCELAR</string>

    <!--Main Menu-->
    <string name="OpenProfileTitle">Ver Perfil</string>
    <string name="LogoutTitle">Cerrar Sesión</string>
    <string name="LoginTitle">Identificate</string>
    <string name="RecognitionTitle">Reconocer Seta</string>
    <string name="CuriosityTitle">Curiosidad diaria</string>
    <string name="TestTitle">Test de conocimientos</string>
    <string name="AboutTitle">Acerca De</string>

    <!-- LOGING -->
    <string name="fui_sign_in_anonymously" translation_description="Continuar como invitado boton">Continuar como invitado</string>
    <string name="fui_sign_in_with_email" translation_description="Inicio de sesión con correoboton">Iniciar sesion/Registrarse con correo</string>
    <string name="fui_next_default" translation_description="Boton continuar">Siguiente</string>
    <string name="fui_welcome_back_email_header" translation_description="Mensaje para los usuarios que vuelven">Bienvenido de nuevo!</string>
    <string name="fui_missing_email_address" translation_description="Error inline por dirección de correo electrónico vacía en el campo de entrada">Introduzca su dirección de correo electrónico para continuar</string>
    <string name="fui_welcome_back_idp_prompt" translation_description="Mensaje para usuarios que necesitan iniciar sesión usando cuentas de proveedores de identidad existentes">
    Ya has utilizado <xliff:g example="jane.doe@example.com" id="email_addr" translation_description="">%1$s</xliff:g>.
    Inicia sesión con <xliff:g example="Google" id="provider_name" translation_description="">%2$s</xliff:g> para continuar.
    </string>

    <string name="fui_welcome_back_password_prompt_body" translation_description="Mensaje para usuarios que necesitan iniciar sesión usando cuentas de correo electrónico existentes">
    Ya has utilizado <xliff:g example="jane.doe@example.com" id="email_addr" translation_description="">%1$s</xliff:g>
    para iniciar sesión. Ingresa tu contraseña para esa cuenta.
    </string>
    <string name="fui_trouble_signing_in" translation_description="Enlace para contraseña olvidada">¿Problemas para iniciar sesión?</string>
    <string name="fui_password_recovery_body" translation_description="Cuerpo del mensaje de recuperación de contraseña">
    Recibe instrucciones enviadas a este correo electrónico que explican cómo restablecer tu contraseña.
    </string>

    <string name="fui_button_text_send" translation_description="Texto del botón para enviar el correo de recuperación">Enviar</string>

    <string name="fui_sign_in_default" translation_description="Texto del botón para iniciar sesión">Iniciar sesión</string>
    <string name="fui_missing_first_and_last_name" translation_description="Error en línea para campos de nombre y apellido vacíos">Por favor, ingresa un nombre y un apellido.</string>

    <string name="fui_button_text_save" translation_description="Texto del botón para guardar el formulario">Guardar</string>

    <string name="fui_new_password_hint" translation_description="Sugerencia para el campo de contraseña de nuevas contraseñas">Nueva contraseña</string>

    <plurals name="fui_error_weak_password">
        <item quantity="one">La contraseña no es lo suficientemente segura. Usa al menos %1$d carácter y una combinación de letras y números</item>
        <item quantity="other">La contraseña no es lo suficientemente segura. Usa al menos %1$d caracteres y una combinación de letras y números</item>
    </plurals>

    <string name="fui_name_hint">Nombre y Apellidos</string>

    <string name="fui_email_account_creation_error">No se pudo registrar la cuenta de correo electrónico</string>

    <string name="fui_title_register_email">Registrarse</string>


    <string name="fui_sign_in_with_google">Acceder con Google</string>
    <string name="fui_sign_in_with_phone">Acceder con el teléfono</string>
    <string name="fui_idp_name_phone">Teléfono</string>
    <string name="fui_verify_phone_number">Verificar número de teléfono</string>
    <string name="fui_sms_terms_of_service">Si presionas “%1$s”, se enviará un SMS. Se aplicarán las tarifas de mensajes y datos.</string>
    <string name="fui_sms_terms_of_service_and_privacy_policy_extended">Si presionas “%1$s”, indicas que aceptas nuestras %2$s y %3$s. Es posible que se te envíe un SMS. Podrían aplicarse las tarifas de mensajes y datos.</string>
    <string name="fui_country_hint">País</string>

    <!-- CURIOSITY -->
    <string name="textBackMenu">Volver al Menu Principal</string>
    <string name="textCuriosityTitle">Curiosidad del día</string>
    <!-- CREATE ENCONTER -->
    <string name="saveEnconter">Guardar Encuentro</string>
    <string name="textCreateEnconterTitle">Crear Encuentro</string>
    <string name="RequestDate"> Introduce Fecha</string>
    <string name="RequestLocation">Introduce Localidad</string>
    <string name="nameMushroomLabel">Nombre de la Seta</string>
    <string name="RequestDateLabel">Fecha Del Encuentro</string>
    <string name="RequestLocationLabel">Localidad del Encuentro</string>
    <string name="WeatherLabel">¿Qué tiempo hacia?</string>
    <string name="mustLogged">Si quiere, debe idenficiarse</string>
    <string name="writtenEncounter">Encuentro creado</string>
    <string name="select">Seleccione</string>

    <string-array name="optionsweather">
        <item>Seleccione</item>
        <item>Soleado</item>
        <item>Nublado</item>
        <item>Lluvia</item>
        <item>Neblina</item>
        <item>Viento</item>
    </string-array>


    <!-- TEST -->
    <string name="textStopTest">Anular Test</string>
    <string name="textTestTitle">TEST</string>
    <string name="Congratulations">¡Enhorabuena!</string>
    <string name="porcentaje_de_aciertos">Porcentaje de aciertos: %.2f %%</string>
    <string name="ReplayTextoButton">Volver a Jugar</string>
    <string name="Exit">Salir</string>

    <!-- PROFILE -->
    <string name="textProfileTitle">PERFIL</string>
    <string name="length_registered_mushrooms">%d Setas En tu Colección</string>
    <string name="go_to_collection">Ver Colección</string>
    <string name="consecutive_days_of_curiosities">%d Días Consecutivos de Curiosidades</string>
    <string name="best_result_profile">Mejor Resultado Test: %.2f %%</string>

    <!-- COLLECTION -->
    <string name="EnconterCollectionDate">Fecha</string>
    <string name="EnconterCollectionLocation">Localidad</string>
    <string name="EnconterCollectionWeather">Tiempo</string>
    <string name="EnconterCollectionDeleteButton">Borrar</string>
    <string name="textCollectiontitle">COLECCIÓN</string>
    <string name="upload_photo">Subir Foto</string>


</resources>