<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nameMusshroomLabel"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nameMusshroom"
            style="@style/H1.FellowshipFungi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:inputType="text" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RequestDateLabel"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/RequestDate"
            android:inputType="date"
            android:maxLines="1"
            android:textStyle="bold" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RequestLocationLabel"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/RequestLocation"
            android:maxLength="10"
            android:textStyle="bold" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/WeatherLabel"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/weather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/optionsweather"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/upload_photo"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/border_background"
                android:clickable="true"
                android:scaleType="centerCrop"
                app:srcCompat="@android:drawable/ic_menu_camera" />
        </LinearLayout>

        <Button
            android:id="@+id/saveEnconter"
            style="@style/Button.FellowshipFungi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="saveEnconter"
            android:text="@string/saveEnconter" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
