<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textCongratulations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:text="@string/Congratulations"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textPercentage"
        style="@style/H1.FellowshipFungi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp"
        android:text="@string/porcentaje_de_aciertos"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/buttonPlayAgain"
            style="@style/Button.FellowshipFungi.Yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:onClick="rePlay"
            android:text="@string/ReplayTextoButton"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/buttonExit"
            style="@style/Button.FellowshipFungi.No"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="backMainMenu"
            android:text="@string/Exit"
            app:backgroundTint="@null" />
    </LinearLayout>

</LinearLayout>
