<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#FFFFFF">


    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:adjustViewBounds="true"
        android:maxHeight="200dp"
        app:srcCompat="@drawable/ic_launcher_background" />


    <LinearLayout
        android:id="@+id/invisibleRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoImageView"
        android:visibility="invisible"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/verPerfilButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/OpenProfileTitle"
            android:layout_marginEnd="8dp"
            android:onClick="onOpenProfileClick"
            style="@style/Button.FellowshipFungi"/>

        <Button
            android:id="@+id/cerrarSesionButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/LogoutTitle"
            android:layout_marginStart="8dp"
            android:onClick="onLogoutClick"
            style="@style/Button.FellowshipFungi"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/invisibleRow"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/identificateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LoginTitle"
            android:layout_marginBottom="8dp"
            android:onClick="onLoginClick"
            style="@style/Button.FellowshipFungi"/>

        <Button
            android:id="@+id/reconocerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RecognitionTitle"
            android:layout_marginBottom="8dp"
            android:onClick="onRecognitionClick"
            style="@style/Button.FellowshipFungi"/>

        <Button
            android:id="@+id/curiosidadButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CuriosityTitle"
            android:layout_marginBottom="8dp"
            android:onClick="onOpenCuriosityClick"
            style="@style/Button.FellowshipFungi"/>

        <Button
            android:id="@+id/testButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TestTitle"
            android:onClick="onOpenTestClick"
            style="@style/Button.FellowshipFungi"/>
    </LinearLayout>

</RelativeLayout>
