<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@mipmap/ic_profile"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:contentDescription="@null"
        android:layout_marginBottom="32dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/lenghtCollectionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/length_registered_mushrooms"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center_vertical" />

        <Button
            android:id="@+id/goToCollectionButton"
            style="@style/Button.FellowshipFungi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_collection"
            android:textSize="14sp"
            app:backgroundTint="@null"
            android:onClick="openCollection"/>

    </LinearLayout>

    <TextView
        android:id="@+id/streakCuriositiesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/consecutive_days_of_curiosities"
        android:layout_marginTop="32dp"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/bestResultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:text="@string/best_result_profile"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>
